--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,9 @@
         {% endblock %}
     </head>
     <body>
+        {% include "movie/partials/_header.html.twig" %}
+        {% include "movie/partials/_heros.html.twig" %}
         {% block body %}{% endblock %}
+        {% include "movie/partials/_footer.html.twig" %}
     </body>
 </html>
