--- a/templates/movie/index.html.twig
+++ b/templates/movie/index.html.twig
@@ -1,20 +1,16 @@
-{% extends 'base.html.twig' %}
+{% extends"base.html.twig" %}
 
-{% block title %}Hello MovieController!{% endblock %}
+{% block title %}Accueil{% endblock %}
 
+{# content #}
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<h1 class="text-indigo-700 text-3xl  uppercase text-center font-bold pb-4 my-4">Nos supers films</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/apprenant/Desktop/my_movie_project/src/Controller/MovieController.php'|file_link(0) }}">src/Controller/MovieController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/apprenant/Desktop/my_movie_project/templates/movie/index.html.twig'|file_link(0) }}">templates/movie/index.html.twig</a></code></li>
-    </ul>
+<div class="grid grid-cols-4 space-x-3">
+{#je fais une boucle de mes articles#}
+{% for post in posts %}
+    {% include "movie/components/card.html.twig" %}   
+{% endfor %}
 </div>
+
 {% endblock %}
