--- a/templates/movie/index.html.twig
+++ b/templates/movie/index.html.twig
@@ -4,7 +4,8 @@
 
 {# content #}
 {% block body %}
-<h1 class="text-indigo-700 text-3xl  uppercase text-center font-bold pb-4 my-4">Nos supers films</h1>
+
+<h1 class="text-red-700 text-3xl  uppercase text-center font-bold pb-4 my-4">Nos supers films</h1>
 
 <div class="grid grid-cols-4 space-x-3">
 {#je fais une boucle de mes articles#}
@@ -14,3 +15,4 @@
 </div>
 
 {% endblock %}
+
