--- a/templates/movie/partials/_heros.html.twig
+++ b/templates/movie/partials/_heros.html.twig
@@ -1,10 +1,33 @@
-<div class="hero min-h-screen" style="background-image: url(/images/stock/photo-1507358522600-9f71e620c44e.jpg);">
-  <div class="hero-overlay bg-opacity-60"></div>
-  <div class="hero-content text-center text-neutral-content">
-    <div class="max-w-md">
-      <h1 class="mb-5 text-5xl font-bold">SuperHerosMovies</h1>
-      <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-      <button class="btn btn-primary">Get Started</button>
+<div class="hero min-h-screen" style="background-image: url();">
+    <div class="carousel rounded-box w-auto">
+        <div class="carousel-item w-1/2">
+            <img src="{{ asset('img/femmes.jpg') }}" class="w-full" />
+        </div> 
+        <div class="carousel-item w-1/2">
+            <img src="{{ asset('img/supersheros1.avif') }}" class="w-full" />
+        </div> 
+        <div class="carousel-item w-1/2">
+            <img src="{{ asset('img/superman.avif') }}" class="w-full" />
+        </div> 
+        <div class="carousel-item w-1/2">
+            <img src="{{ asset('img/batman.jpg') }}" class="w-full" />
+        </div> 
+        <div class="carousel-item w-1/2">
+            <img src="{{ asset('img/disney.png') }}" class="w-full" />
+        </div> 
+        <div class="carousel-item w-1/2">
+            <img src="{{ asset('img/godzillafrankenstein.jpg') }}" class="w-full" />
+        </div> 
+        <div class="carousel-item w-1/2">
+            <img src="{{ asset('img/starwars.jpeg') }}" class="w-full" />
+        </div>
     </div>
-  </div>
+    
+    <div class="hero-content text-center text-neutral-content">
+        <div class="max-w-md">
+            <h1 class="mb-5 text-5xl font-bold text-red-500">SupersHerosMovies</h1>
+            <p class="mb-5 text-xl text-red-600 font-bold">Envie de passer une bonne soirée avec des supers héros?????vous étes au bon endroit. Il y en a pour tous les gouts. Alors inscrivez-vous vite!!!!.</p>
+            <button class="btn glass text-red-800 font-black">Inscrivez-vous</button>
+        </div>
+    </div>
 </div>
