--- a/templates/movie/components/card.html.twig
+++ b/templates/movie/components/card.html.twig
@@ -1,8 +1,8 @@
-<div class="card w-96 bg-base-100 shadow-xl">
-  <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
+<div class="card w-96 bg-zinc-200 shadow-xl">
+  <figure ><img src="{{post.Image }}" alt="affiche du film" class="text-red-800 " /></figure>
   <div class="card-body">
-    <h2 class="card-title">Shoes!</h2>
-    <p>If a dog chews shoes whose shoes does he choose?</p>
+    <h2 class="card-title">{{post.title}}</h2>
+    <p>{{ post.description}}</p>
     <div class="card-actions justify-end">
       <button class="btn btn-primary">regarder</button>
     </div>
