--- a/templates/movie/components/card.html.twig
+++ b/templates/movie/components/card.html.twig
@@ -1,10 +1,9 @@
-<div class="card w-96 bg-zinc-200 shadow-xl">
-  <figure ><img src="{{post.Image }}" alt="affiche du film" class="text-red-800 " /></figure>
-  <div class="card-body">
-    <h2 class="card-title">{{post.title}}</h2>
-    <p>{{ post.description}}</p>
+<div class="card w-96 bg-base-100 shadow-xl image-full">
+  <figure><img src="{{post.Image }}" alt="Movie" /></figure>
+  <div class="card-body item-center  ">
+    <h2 class="card-title text-red-700 text-2xl font-bold text-center ">{{post.title}}</h2>
     <div class="card-actions justify-end">
-      <button class="btn btn-primary">regarder</button>
+      <button class="btn bg-red-500 m-auto mt-40">Regardez</button>
     </div>
   </div>
 </div>
