--- a/templates/movie/partials/_header.html.twig
+++ b/templates/movie/partials/_header.html.twig
@@ -1,6 +1,6 @@
 <div class="navbar bg-transparent">
     <div class="flex-1">
-        <a class="btn btn-ghost normal-case text-5xl font-black text-red-600">SHM</a>
+        <a class="btn btn-outline btn-warning  rounded-full w-28   text-3xl font-black bg-red-800 ">SHM</a>
     </div>
     <div class="flex-none">
         <ul class="menu menu-horizontal px-1">
