--- a/templates/movie/components/card.html.twig
+++ b/templates/movie/components/card.html.twig
@@ -3,7 +3,9 @@
   <div class="card-body item-center  ">
     <h2 class="card-title text-red-700 text-2xl font-bold text-center ">{{post.title}}</h2>
     <div class="card-actions justify-end">
+    <a href="{{path('app_showmovie',{'id':post.id})}}">
       <button class="btn bg-red-500 m-auto mt-40">Regardez</button>
+    </a>
     </div>
   </div>
 </div>
