--- a/templates/movie/index.html.twig
+++ b/templates/movie/index.html.twig
@@ -4,7 +4,7 @@
 
 {# content #}
 {% block body %}
-
+{% include "movie/partials/_heros.html.twig" %}
 <h1 class="text-red-700 text-4xl  uppercase text-center  font-bold pb-4 my-4">Nos supers films</h1>
 
 <div class="grid grid-cols-4 space-x-3">
