add button ajouter

--- a/templates/movie/partials/_header.html.twig
+++ b/templates/movie/partials/_header.html.twig
@@ -2,6 +2,8 @@
     <div class="flex-1">
         <a href="{{path('app_movie')}}" class="btn btn-outline btn-warning  rounded-full w-28   text-3xl font-black bg-red-800 ">SHM</a>
     </div>
+        <ul class="menu menu-horizontal px-1">
+            <li><a href="{{ path ('app_create')}}" class="text-red-600 font-bold text-3xl">Ajouter un film</a></li>
     <div class="flex-none">
         <ul class="menu menu-horizontal px-1">
             <li>
