--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .form {
+        @apply border border-gray-300 rounded w-full my-3;
+    }
+}
+
+form > div > div > ul >li {
+    color:red
+}
