--- a/templates/movie/components/card.html.twig
+++ b/templates/movie/components/card.html.twig
@@ -1,4 +1,4 @@
-<div class="card w-96 bg-base-100 shadow-xl image-full">
+<div class="card w-96   shadow-xl image-full">
   <figure><img src="{{post.Image }}" alt="Movie" /></figure>
   <div class="card-body item-center  ">
     <h2 class="card-title text-red-700 text-2xl font-bold text-center ">{{post.title}}</h2>
