--- a/templates/movie/partials/_heros.html.twig
+++ b/templates/movie/partials/_heros.html.twig
@@ -27,7 +27,9 @@
         <div class="max-w-md">
             <h1 class="mb-5 text-5xl font-bold text-red-500">SupersHerosMovies</h1>
             <p class="mb-5 text-xl text-red-600 font-bold">Envie de passer une bonne soirée avec des supers héros?????vous étes au bon endroit. Il y en a pour tous les gouts. Alors inscrivez-vous vite!!!!.</p>
-            <button class="btn glass text-red-800 font-black">Inscrivez-vous</button>
+                <a href="{{path('app_register')}}">
+                <button class="btn glass text-red-800 font-black">Inscrivez-vous</button>
+                </a>
         </div>
     </div>
 </div>
