--- a/templates/movie/update.html.twig
+++ b/templates/movie/update.html.twig
@@ -6,9 +6,9 @@ Accueil
 
 
 {% block body %}
-    <h1 class="text-indigo-700 text-3xl text-center font-bold pb-4">ajouter un avis</h1>
+    <h1 class="text-red-600 text-3xl text-center font-bold ">Ajouter un avis</h1>
 
-    <div class="max-w-sm mx-auto">
+    <div class="card-body bg-zinc-200 rounded-xl m-24 text-red-500">
         {{ form_start(showForm ,{'attr':{'novalidate': 'novalidate'}}) }}
             {{form_widget(showForm)}}
             <div class="mt-5">
