--- a/templates/movie/create.html.twig
+++ b/templates/movie/create.html.twig
@@ -4,7 +4,7 @@
 Accueil
 {% endblock %}
 {% block body %}
-<h1 class="text-red-500 text-5xl text-center font-bold pb-4">Ajouter un film</h1>
+<h1 class="text-red-500 text-5xl text-center font-bold uppercase pb-4 mt-8">Ajouter un film</h1>
 <div class="card-body bg-zinc-200 rounded-xl m-24 text-red-500" >
 
     {{form_start(showForm, {'attr' :  {'class':'form'}})}}
